# ai-stock-master

./: .env.example  .gitignore  CLAUDE.md  GEMINI_INTEGRATION.md  QUICK_START.md  README.md  example.py  init_data.sh  pyproject.toml  quick_test.py  start-frontend.sh  start.sh  test_api.py
backend/: __init__.py  config.py  init_db.py  main.py  schemas.py
backend/ai_models/: __init__.py  gemini_analyzer.py  simple_predictor.py
backend/analysis/: __init__.py  backtest.py  technical_analysis.py
backend/api/: __init__.py  analysis.py  data.py  gemini.py  stock.py  watchlist.py
backend/data_collector/: __init__.py  akshare_collector.py  base.py  tushare_collector.py
backend/database/: __init__.py  database.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/pages/: AIPredict.jsx  Analysis.jsx  Backtest.jsx  Dashboard.jsx  GeminiAnalysis.jsx  StockDetail.jsx  StockList.jsx  WatchList.jsx
