[project]
name = "ai-stock-master"
version = "0.1.0"
description = "AI炒股大师 - A股智能分析系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.5",
    
    # 数据处理
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    
    # 数据库
    "sqlalchemy>=2.0.0",
    
    # A股数据源
    "tushare>=1.4.0",
    "akshare>=1.12.0",
    
    # 技术指标
    "ta>=0.11.0",
    
    # 数据可视化
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    
    # AI模型
    "google-genai>=0.2.0",
    "pillow>=10.0.0",
    
    # 工具库
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
ml = [
    # 机器学习
    "scikit-learn>=1.3.0",
    "tensorflow>=2.15.0",
    "xgboost>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true